@@ -6,6 +6,8 @@ detailled list of changes, please see ChangeLog.
 Bug fixes:
  - apport-retrace: Fix crash if InterpreterPath/ExecutablePath do not exist.
  - hookutils.py, attach_alsa(): Attach /proc/cpuinfo too, for CPU flags.
+ - Fix crash if InterpreterPath does not exist any more at the time of
+   reporting. (LP: #428289)
 
 1.9.4 (2009-11-06)
 ------------------
